--- a/questapp/src/main/resources/application.properties
+++ b/questapp/src/main/resources/application.properties
@@ -1,21 +1,6 @@
-#
-#spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=jdbc:mysql://localhost:3306/questapp?enabledTLSProtocols=TLSv1.2
-#spring.datasource.username=root
-#spring.datasource.password=root
-#server.port=8080
-#spring.security.user.name=user
-##spring.security.user.password=c8be15de-4488-4490-9dc6-fab3f91435c6
-#spring.security.user.password=user
-#spring.main.allow-circular-references=true
-#
-#questapp.app.secret=questApp
-##millisecond cinsinden 2 dakika. Bunu 1 saat olarak hesaplayip degistirebilirsiniz.
-#questapp.expires.in=120000
-##saniye cinsinden 7 gun
-#refresh.token.expires.in=604800
 
-spring.jpa.hibernate.ddl-auto=create
+
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/questapp?enabledTLSProtocols=TLSv1.2
 spring.datasource.username=root
 spring.datasource.password=root
