post atılabileek şekilde yapıldı.

--- a/questapp/src/main/resources/application.properties
+++ b/questapp/src/main/resources/application.properties
@@ -8,7 +8,8 @@ server.port=8080
 spring.security.user.name=user
 spring.security.user.password=user
 spring.main.allow-circular-references=true
-
+spring.datasource.hikari.schema=update
+spring.jpa.properties.hibernate.format_sql=true
 questapp.app.secret=questApp
 #millisecond cinsinden 2 dakika. Bunu 1 saat olarak hesaplayip degistirebilirsiniz.
 questapp.expires.in=120000
